<resources>
    <string name="app_name">OrderFood</string>
    <string name="log_in">Log In</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
</resources>